--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
-
 .MainCont
 {
+
     margin-left: auto;
     margin-right: auto;
-    width: 20rem;
+    min-width:  20rem;
     min-height: 30rem;
     margin-top: 2rem;
     background-color: teal;
@@ -15,7 +15,8 @@
 
 
 .App
-{
+{   
+    display: flex;
     text-align: center; 
 }
 
@@ -47,6 +48,8 @@ input{
     border-radius : 10px;
     width: 13.4rem;
     height: 2.5rem;
+    padding: 5px 10px;
+    outline: none;
     
 }
 
@@ -91,49 +94,10 @@ input{
     display: flex;
     gap: 5px;
 }
+
+.head
+{
+    color: white;
+    padding-top: 2rem;
     
- 
-
-
-
-
-  
-
-  /* .container {
-    background-color: teal;
-    padding: 20px;
-    margin: 20px;
-    display: flex;
-    justify-content: center;
-    max-width: 600px; 
-     margin: 0 auto; 
-  }
-  
- 
-   
-  
-  .todo-list-container {
-    display: flex;
-    flex-direction: column;
-    padding: 10px;
-    margin-top: 10px;
-  }
-  
-  .todo-item {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 10px;
-    border: 1px solid black;
-    padding: 10px;
-    margin-bottom: 5px;
-  }
-  
-  .todo-icons {
-    display: flex;
-    gap: 5px;
-  } 
-  
-   */
-  
-  
+}
